tests/sumo/output/e1Instant/errors/pos_too_high/errors.sumo
Error: The position of detector '4/1to3/1' lies beyond the lane's '4/1to3/1_0' end.
Quitting (on error).
